Fixes cropped tab titles when opening to the Styles tab 🎉

--- a/app/styles/modules/_common-styles.scss
+++ b/app/styles/modules/_common-styles.scss
@@ -360,9 +360,10 @@ $accent                 // Accent / Highlight
         margin-left: 12px;
 
         .tabbed-pane-header-tab {
-          font-size: 10px;
+          font-size: 12px;
           height: 28px;
           padding: 6px 12px !important;
+          width: auto !important;
         }
       }
     }
